--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Multipurpose site</title>
+  <title>Multipurpose site version 1.02</title>
   <link rel="stylesheet" href="index1.css">
 </head>
 <body>
