--- a/faqs.html
+++ b/faqs.html
@@ -50,6 +50,10 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
     }
 
     button:hover {
@@ -69,6 +73,7 @@
       border-radius: 5px;
       padding: 10px 15px;
       transition: background 0.3s;
+      user-select: none;
     }
 
     .faq:hover {
@@ -84,10 +89,17 @@
     }
 
     .faq-content {
-      display: none;
-      margin-top: 10px;
+      max-height: 0;
+      overflow: hidden;
+      margin-top: 0;
       color: #444;
       font-size: 15px;
+      transition: max-height 0.3s ease, margin-top 0.3s ease;
+    }
+
+    .faq.active .faq-content {
+      max-height: 300px;
+      margin-top: 10px;
     }
 
     .icon {
@@ -95,26 +107,30 @@
       margin-right: 8px;
     }
 
-    /* Success Popup */
-    .success-message {
+    .success-message, .error-message {
       display: none;
       text-align: center;
-      background: #d4edda;
-      color: #155724;
-      border: 1px solid #c3e6cb;
       padding: 15px;
       margin-top: 20px;
       border-radius: 6px;
       animation: fadeIn 0.5s ease-in-out;
     }
 
+    .success-message {
+      background: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
+    }
+
+    .error-message {
+      background: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
-    }
-
-    iframe {
-      display: none;
     }
   </style>
 </head>
@@ -123,26 +139,24 @@
   <div class="container">
     <h1><i class="fas fa-lightbulb icon"></i> Submit Your Suggestion</h1>
 
-    <form id="suggestion-form" action="https://formsubmit.io/send/gladysdarkwah1978@gmail.com" method="POST" target="hidden_iframe">
-      <input type="hidden" name="_captcha" value="false" />
-      <input type="hidden" name="_iframe" value="true" />
-
+    <form id="suggestion-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="suggestion" placeholder="Your Suggestion" rows="5" required></textarea>
       <button type="submit"><i class="fas fa-paper-plane icon"></i> Send Suggestion</button>
     </form>
 
-    <div id="success" class="success-message">
+    <div id="success" class="success-message" role="alert">
       <i class="fas fa-check-circle"></i> Your message has been sent successfully!
     </div>
-
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="formSubmitted()"></iframe>
+    <div id="error" class="error-message" role="alert">
+      <i class="fas fa-exclamation-circle"></i> Oops! Something went wrong. Please try again later.
+    </div>
 
     <div class="faqs">
       <h2><i class="fas fa-question-circle icon"></i> Frequently Asked Questions</h2>
 
-      <div class="faq" onclick="toggleFAQ(this)">
+      <div class="faq">
         <div class="faq-title">
           <span><i class="fas fa-comment icon"></i>What kind of suggestions can I submit?</span>
           <i class="fas fa-chevron-down"></i>
@@ -152,7 +166,7 @@
         </div>
       </div>
 
-      <div class="faq" onclick="toggleFAQ(this)">
+      <div class="faq">
         <div class="faq-title">
           <span><i class="fas fa-reply icon"></i>Will I get a response?</span>
           <i class="fas fa-chevron-down"></i>
@@ -162,7 +176,7 @@
         </div>
       </div>
 
-      <div class="faq" onclick="toggleFAQ(this)">
+      <div class="faq">
         <div class="faq-title">
           <span><i class="fas fa-shield-alt icon"></i>Is my data safe?</span>
           <i class="fas fa-chevron-down"></i>
@@ -174,37 +188,72 @@
     </div>
   </div>
 
+  <!-- EmailJS SDK -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
-    // Toggle FAQ
-    function toggleFAQ(faqElement) {
-      const content = faqElement.querySelector('.faq-content');
-      const icon = faqElement.querySelector('.faq-title i.fas.fa-chevron-down');
+    // Initialize EmailJS with your public key
+    (function() {
+      emailjs.init("8lvUO5fQVdMnDSae6");
+    })();
 
-      if (content.style.display === "block") {
-        content.style.display = "none";
-        icon.classList.remove("fa-chevron-up");
-        icon.classList.add("fa-chevron-down");
-      } else {
-        content.style.display = "block";
-        icon.classList.remove("fa-chevron-down");
-        icon.classList.add("fa-chevron-up");
-      }
-    }
+    // FAQ toggle logic with accessibility support
+    document.querySelectorAll('.faq').forEach((faq, index) => {
+      const title = faq.querySelector('.faq-title');
+      const content = faq.querySelector('.faq-content');
+      
+      title.setAttribute('tabindex', '0');
+      title.setAttribute('role', 'button');
+      title.setAttribute('aria-expanded', 'false');
+      title.setAttribute('aria-controls', `faq-content-${index}`);
+      content.id = `faq-content-${index}`;
 
-    // Handle form success
-    let submitted = false;
+      const toggleFAQ = () => {
+        faq.classList.toggle('active');
+        const expanded = faq.classList.contains('active');
+        title.setAttribute('aria-expanded', expanded.toString());
+      };
 
-    document.getElementById("suggestion-form").addEventListener("submit", function () {
-      submitted = true;
+      title.addEventListener('click', toggleFAQ);
+      title.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          toggleFAQ();
+        }
+      });
     });
 
-    function formSubmitted() {
-      if (submitted) {
-        document.getElementById("success").style.display = "block";
-        document.getElementById("suggestion-form").reset();
-        submitted = false;
-      }
-    }
+    // Form submission logic
+    const form = document.getElementById('suggestion-form');
+    const successMessage = document.getElementById('success');
+    const errorMessage = document.getElementById('error');
+    const submitButton = form.querySelector('button');
+
+    form.addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      // Reset messages
+      successMessage.style.display = 'none';
+      errorMessage.style.display = 'none';
+
+      // Disable button and show loading
+      submitButton.disabled = true;
+      submitButton.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Sending...';
+
+      // Send form via EmailJS with correct service and template IDs
+      emailjs.sendForm('service_n3heucz', 'template_rc4565p', this)
+        .then(() => {
+          successMessage.style.display = 'block';
+          form.reset();
+        })
+        .catch((err) => {
+          console.error('EmailJS error:', err);
+          errorMessage.style.display = 'block';
+        })
+        .finally(() => {
+          submitButton.disabled = false;
+          submitButton.innerHTML = '<i class="fas fa-paper-plane icon"></i> Send Suggestion';
+        });
+    });
   </script>
 
 </body>
