--- a/movies.html
+++ b/movies.html
@@ -66,33 +66,36 @@
       background-color: #e50914;
       color: white;
       border: none;
-      padding: 10px 20px;
       border-radius: 5px;
       cursor: pointer;
+      padding: 10px 20px;
     }
 
     button[type="submit"]:hover {
       background-color: #b00710;
     }
 
-    .drop-zone {
-      border: 2px dashed #e50914;
-      padding: 20px;
-      text-align: center;
-      margin-bottom: 20px;
+    /* Drag and drop zone */
+    #dropZone {
+      border: 2px dashed #555;
       border-radius: 10px;
-      transition: background-color 0.3s;
+      padding: 20px;
+      margin-bottom: 20px;
+      text-align: center;
       cursor: pointer;
-      user-select: none;
+      color: #aaa;
+      transition: background-color 0.3s, border-color 0.3s;
     }
 
-    .drop-zone.hover {
+    #dropZone.hover {
       background-color: #333;
+      border-color: #e50914;
+      color: white;
     }
 
     .video-gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 20px;
     }
 
@@ -103,7 +106,6 @@
       display: flex;
       flex-direction: column;
       position: relative;
-      box-shadow: 0 0 8px #000;
     }
 
     .movie-title {
@@ -111,12 +113,11 @@
       font-size: 18px;
       font-weight: bold;
       text-align: center;
-      user-select: text;
     }
 
     .video-wrapper {
       position: relative;
-      padding-top: 56.25%; /* 16:9 ratio */
+      padding-top: 56.25%;
     }
 
     .video-wrapper iframe,
@@ -143,7 +144,14 @@
       cursor: pointer;
       font-size: 12px;
       z-index: 2;
-      user-select: none;
+    }
+
+    .delete-btn:hover {
+      background-color: rgba(200, 0, 0, 0.9);
+    }
+
+    .hidden {
+      display: none;
     }
 
     .downloads-list {
@@ -163,19 +171,11 @@
       text-decoration: none;
     }
 
-    .hidden {
-      display: none;
-    }
-
     footer {
       text-align: center;
       margin-top: 40px;
       font-size: 14px;
       color: #aaa;
-    }
-
-    #fileInput {
-      display: none;
     }
   </style>
 </head>
@@ -187,19 +187,22 @@
       <button id="downloadsTab">⬇️ Downloads</button>
     </nav>
 
+    <!-- Movies Page -->
     <div id="moviesPage">
-      <label for="fileInput" id="dropZone" class="drop-zone" tabindex="0" role="button" aria-label="Drag & Drop .mp4 files or click to select">
-        Drag & Drop .mp4 files here or click to select
-      </label>
-      <input type="file" id="fileInput" accept=".mp4" />
       <form id="videoForm">
         <input type="text" id="movieTitle" placeholder="Movie Title" required />
         <input type="text" id="videoUrl" placeholder="Video URL (YouTube or .mp4)" required />
         <button type="submit">Add Movie</button>
       </form>
+
+      <!-- Drag and Drop Zone -->
+      <div id="dropZone">Drag & Drop your .mp4 video here or click to select file</div>
+      <input type="file" id="fileInput" accept="video/mp4" style="display:none" />
+
       <div id="videoGallery" class="video-gallery"></div>
     </div>
 
+    <!-- Downloads Page -->
     <div id="downloadsPage" class="hidden">
       <ul id="downloadsList" class="downloads-list"></ul>
     </div>
@@ -208,18 +211,23 @@
   </div>
 
   <script>
+    // DOM Elements
     const moviesTab = document.getElementById("moviesTab");
     const downloadsTab = document.getElementById("downloadsTab");
     const moviesPage = document.getElementById("moviesPage");
     const downloadsPage = document.getElementById("downloadsPage");
-    const dropZone = document.getElementById("dropZone");
-    const fileInput = document.getElementById("fileInput");
+
     const videoForm = document.getElementById("videoForm");
     const titleInput = document.getElementById("movieTitle");
     const videoInput = document.getElementById("videoUrl");
     const gallery = document.getElementById("videoGallery");
     const downloadsList = document.getElementById("downloadsList");
 
+    // Drag and Drop Elements
+    const dropZone = document.getElementById("dropZone");
+    const fileInput = document.getElementById("fileInput");
+
+    // Tab Toggler
     moviesTab.onclick = () => {
       moviesTab.classList.add("active");
       downloadsTab.classList.remove("active");
@@ -235,6 +243,7 @@
       renderDownloads();
     };
 
+    // Storage Utilities
     function getMovies() {
       return JSON.parse(localStorage.getItem("movies")) || [];
     }
@@ -248,12 +257,11 @@
       return match ? match[1] : null;
     }
 
-    // Create unique video ID
+    // Generate unique video ID
     function generateVideoId() {
-      return 'video-' + Date.now() + '-' + Math.floor(Math.random() * 1000);
+      return 'vid-' + Math.random().toString(36).substr(2, 9);
     }
 
-    // Create a movie card, assigning a unique id to the video or iframe element
     function createMovieCard(movie, index) {
       const card = document.createElement("div");
       card.className = "movie-card";
@@ -261,13 +269,7 @@
       const deleteBtn = document.createElement("button");
       deleteBtn.className = "delete-btn";
       deleteBtn.textContent = "Delete";
-      deleteBtn.onclick = () => {
-        const movies = getMovies();
-        movies.splice(index, 1);
-        saveMovies(movies);
-        renderMovies(movies);
-        renderDownloads();
-      };
+      deleteBtn.onclick = () => deleteMovie(index);
 
       const title = document.createElement("div");
       title.className = "movie-title";
@@ -276,38 +278,51 @@
       const videoWrapper = document.createElement("div");
       videoWrapper.className = "video-wrapper";
 
-      const videoId = movie.videoId || generateVideoId();
-
       if (movie.video.includes("youtube.com") || movie.video.includes("youtu.be")) {
         const id = extractYouTubeID(movie.video);
-        videoWrapper.innerHTML = `<iframe id="${videoId}" src="https://www.youtube.com/embed/${id}" allowfullscreen></iframe>`;
+        if (id) {
+          videoWrapper.innerHTML = `<iframe id="${movie.videoId || ''}" src="https://www.youtube.com/embed/${id}" allowfullscreen></iframe>`;
+        }
       } else {
-        videoWrapper.innerHTML = `<video id="${videoId}" controls preload="auto" src="${movie.video}"></video>`;
+        videoWrapper.innerHTML = `
+          <video id="${movie.videoId || ''}" controls>
+            <source src="${movie.video}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>`;
       }
 
       card.appendChild(deleteBtn);
       card.appendChild(title);
       card.appendChild(videoWrapper);
+
       return card;
     }
 
     function renderMovies(movies) {
       gallery.innerHTML = "";
       movies.forEach((movie, index) => {
-        // Ensure each movie has videoId saved to keep it consistent
-        if (!movie.videoId) movie.videoId = generateVideoId();
-        gallery.appendChild(createMovieCard(movie, index));
+        const card = createMovieCard(movie, index);
+        gallery.appendChild(card);
       });
-      saveMovies(movies); // Save videoIds back in localStorage
+    }
+
+    function deleteMovie(index) {
+      const movies = getMovies();
+      movies.splice(index, 1);
+      saveMovies(movies);
+      renderMovies(movies);
+      renderDownloads();
     }
 
     function renderDownloads() {
       const movies = getMovies();
       downloadsList.innerHTML = "";
+
       if (movies.length === 0) {
         downloadsList.innerHTML = "<li>No movies downloaded yet.</li>";
         return;
       }
+
       movies.forEach((movie) => {
         const li = document.createElement("li");
         li.innerHTML = `<strong>${movie.title}</strong><br/>` +
@@ -318,19 +333,22 @@
       });
     }
 
+    // Add New Movie from form
     videoForm.addEventListener("submit", (e) => {
       e.preventDefault();
       const title = titleInput.value.trim();
       const video = videoInput.value.trim();
+
       if (!title || !video) return;
+
       const movies = getMovies();
-      if (movies.some(m => m.video === video)) {
-        alert("This video is already added.");
-        return;
-      }
+
+      // Assign unique videoId for YouTube or .mp4 link from form
       movies.push({ title, video, videoId: generateVideoId() });
       saveMovies(movies);
       renderMovies(movies);
+
+      // Reset form
       titleInput.value = "";
       videoInput.value = "";
     });
